unpackaged/main/default/objects/DSCORGPKG__Triggered_Append_Clean__c/DSCORGPKG__Triggered_Append_Clean__c.object-meta.xml
<CustomObject>
    <label>Triggered Append &amp; Clean</label>
    <nameField>
        <displayFormat>TAC-{000000}</displayFormat>
        <label>Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Triggered Append &amp; Clean</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>