unpackaged/main/default/objects/DSCORGPKG__Triggered_Append_Clean__c/fields/DSCORGPKG__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>