unpackaged/main/default/objects/DSCORGPKG__Triggered_Append_Clean__c/fields/DSCORGPKG__isEnabled__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEnabled?</label>
    <type>Checkbox</type>
</CustomField>