unpackaged/main/default/objects/DSCORGPKG__Triggered_Append_Clean__c/fields/DSCORGPKG__Matching_Method_Chosen__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Matching_Method_Chosen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matching Method Chosen</label>
    <type>Checkbox</type>
</CustomField>