unpackaged/main/default/objects/DSCORGPKG__Triggered_Append_Clean__c/fields/DSCORGPKG__Search_Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Search_Filter_JSON__c</fullName>
    <label>Search Filter JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>