unpackaged/main/default/objects/DSCORGPKG__Triggered_Append_Clean__c/fields/DSCORGPKG__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__SObject_Type__c</fullName>
    <label>SObject Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>