unpackaged/main/default/objects/DSCORGPKG__Triggered_Append_Clean__c/fields/DSCORGPKG__Where_Condition__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Where_Condition__c</fullName>
    <label>Where Condition</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>